feat: setting up base styles and colors

--- a/index.html
+++ b/index.html
@@ -4,14 +4,27 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+		/>
 		<link rel="stylesheet" href="css/style.css" />
 		<title>Chunks</title>
 	</head>
 	<body>
-		<header>
-			<nav>
-				<div class="logo">
-					<h1>Chunks</h1>
+		<header class="header">
+			<nav class="navbar">
+				<div class="nav-item">
+					<h1 class="logo">
+						<i class="fas fa-cubes"></i>
+						Chunks
+					</h1>
+				</div>
+				<div class="nav-item">
+					<ul class="navlist">
+						<li class="navlist-item">Documentation</li>
+						<li class="navlist-item"><i class="fab fa-github"></i></li>
+					</ul>
 				</div>
 			</nav>
 		</header>
