feat: created some basic content

--- a/index.html
+++ b/index.html
@@ -15,20 +15,55 @@
 		<header class="header">
 			<nav class="navbar">
 				<div class="nav-item">
-					<h1 class="logo">
+					<h2 class="logo">
 						<i class="fas fa-cubes"></i>
 						Chunks
-					</h1>
+					</h2>
 				</div>
 				<div class="nav-item">
 					<ul class="navlist">
-						<li class="navlist-item">Documentation</li>
+						<li class="navlist-item">Docs</li>
 						<li class="navlist-item"><i class="fab fa-github"></i></li>
 					</ul>
 				</div>
 			</nav>
 		</header>
-		<main>Documentation content comes here</main>
-		<footer>Created by Tahir Ahmed T</footer>
+		<main class="container">
+			<section class="hero flex flex-center flex-column">
+				<h1 class="logo">
+					<i class="fas fa-cubes"></i>
+					<span>Chunks</span>
+				</h1>
+				<p class="p-justify">
+					A UI Component Library that provides utilty classes for you to create
+					your User Interfaces at Rocket speed🚀
+				</p>
+        <p class="p-justify">
+          <pre><code>Add CDN Link and way to import image / code here</code></pre>
+        </p>
+				<a href="./docs.html" class="primary-link">Get Started</a>
+			</section>
+		</main>
+		<footer class="flex flex-center flex-column">
+      <p>Created by Tahir Ahmed T</p>
+
+      <ul class="list style-none horizontal wd-100 justify-center list-gap-1">
+        <li>
+          <a class="list-icon" rel="noopener noreferrer" href="https://github.com/ttahm3d" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+        </li>
+        <li>
+          <a class="list-icon" rel="noopener noreferrer" href="https://twitter.com/ttahm3d" target="_blank"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </li>
+        <li>
+          <a class="list-icon" rel="noopener noreferrer" href="https://www.linkedin.com/in/tahirahmedt" target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
 	</body>
 </html>
