feat: redid routing

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
 		/>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="/css/style.css" />
 		<title>Chunks</title>
 	</head>
 	<body>
 		<header class="header">
-			<nav class="navbar">
+			<nav class="navbar container">
 				<div class="nav-item">
 					<h2 class="logo">
 						<i class="fas fa-cubes"></i>
@@ -21,9 +21,18 @@
 					</h2>
 				</div>
 				<div class="nav-item">
-					<ul class="navlist">
-						<li class="navlist-item">Docs</li>
-						<li class="navlist-item"><i class="fab fa-github"></i></li>
+					<ul class="navlist align-base">
+						<li class="navlist-item"><a href="pages/docs.html">Docs</a></li>
+						<li class="navlist-item">
+							<a
+								class="list-icon"
+								rel="noopener noreferrer"
+								href="https://github.com/ttahm3d"
+								target="_blank"
+							>
+								<i class="fab fa-github"></i>
+							</a>
+						</li>
 					</ul>
 				</div>
 			</nav>
@@ -34,36 +43,46 @@
 					<i class="fas fa-cubes"></i>
 					<span>Chunks</span>
 				</h1>
-				<p class="p-justify">
+				<p class="justify">
 					A UI Component Library that provides utilty classes for you to create
 					your User Interfaces at Rocket speed🚀
 				</p>
-        <p class="p-justify">
-          <pre><code>Add CDN Link and way to import image / code here</code></pre>
-        </p>
-				<a href="./docs.html" class="primary-link">Get Started</a>
+				<pre><code>Add CDN Link and way to import image / code here</code></pre>
+				<a href="./pages/docs.html" class="primary-link">Get Started</a>
 			</section>
 		</main>
 		<footer class="flex flex-center flex-column">
-      <p>Created by Tahir Ahmed T</p>
+			<p>Created by Tahir Ahmed T</p>
 
-      <ul class="list style-none horizontal wd-100 justify-center list-gap-1">
-        <li>
-          <a class="list-icon" rel="noopener noreferrer" href="https://github.com/ttahm3d" target="_blank"
-            ><i class="fab fa-github"></i
-          ></a>
-        </li>
-        <li>
-          <a class="list-icon" rel="noopener noreferrer" href="https://twitter.com/ttahm3d" target="_blank"
-            ><i class="fab fa-twitter"></i
-          ></a>
-        </li>
-        <li>
-          <a class="list-icon" rel="noopener noreferrer" href="https://www.linkedin.com/in/tahirahmedt" target="_blank"
-            ><i class="fab fa-linkedin"></i
-          ></a>
-        </li>
-      </ul>
-    </footer>
+			<ul class="list style-none horizontal wd-100 justify-center list-gap-1">
+				<li>
+					<a
+						class="list-icon"
+						rel="noopener noreferrer"
+						href="https://github.com/ttahm3d"
+						target="_blank"
+						><i class="fab fa-github"></i
+					></a>
+				</li>
+				<li>
+					<a
+						class="list-icon"
+						rel="noopener noreferrer"
+						href="https://twitter.com/ttahm3d"
+						target="_blank"
+						><i class="fab fa-twitter"></i
+					></a>
+				</li>
+				<li>
+					<a
+						class="list-icon"
+						rel="noopener noreferrer"
+						href="https://www.linkedin.com/in/tahirahmedt"
+						target="_blank"
+						><i class="fab fa-linkedin"></i
+					></a>
+				</li>
+			</ul>
+		</footer>
 	</body>
 </html>
