--- a/pages/docs.html
+++ b/pages/docs.html
@@ -109,10 +109,10 @@
 			</section>
 			<section>
 				<div>
-					<h3 class="heading-3 head-lvl-3" id="avatar">avatar</h3>
+					<h3 class="heading-3 head-lvl-3 stick-top" id="avatar">avatar</h3>
 				</div>
 				<div>
-					<h3 class="heading-3 head-lvl-3" id="alert">alert</h3>
+					<h3 class="heading-3 head-lvl-3 stick-top" id="alert">alert</h3>
 					<p class="justify">
 						alerts are very common in most of the applications. To provide
 						feedback to use to any of his / her actions, we make use of alerts.
@@ -124,14 +124,16 @@
 					<p class="alert alert-warning">This is an example of warning alert</p>
 				</div>
 				<div>
-					<h3 class="heading-3 head-lvl-3" id="badge">badge</h3>
-					<h4 class="heading-4 head-lvl-4" id="badge-on-icon">badge on icon</h4>
-					<h4 class="heading-4 head-lvl-4" id="badge-on-avatar">
+					<h3 class="heading-3 head-lvl-3 stick-top" id="badge">badge</h3>
+					<h4 class="heading-4 head-lvl-4 stick-top" id="badge-on-icon">
+						badge on icon
+					</h4>
+					<h4 class="heading-4 head-lvl-4 stick-top" id="badge-on-avatar">
 						badge on avatar
 					</h4>
 				</div>
 				<div>
-					<h3 class="heading-3 head-lvl-3" id="button">button</h3>
+					<h3 class="heading-3 head-lvl-3 stick-top" id="button">button</h3>
 					<p class="justify">
 						buttons are used in two ways &mdash; buttons and call to action
 						links. Call to actions are used to grab users attention to some
@@ -139,7 +141,7 @@
 						variants of buttons. These classes can be used on both buttons and
 						anchor links
 					</p>
-					<h4 class="heading-4 head-lvl-4" id="primary-button">
+					<h4 class="heading-4 head-lvl-4 stick-top" id="primary-button">
 						normal button
 					</h4>
 					<div class="flex flex-gap-2">
@@ -147,13 +149,17 @@
 						<button class="btn btn-secondary">secondary button</button>
 						<button class="btn btn-danger">danger button</button>
 					</div>
-					<h4 class="heading-4 head-lvl-4" id="link-button">link button</h4>
+					<h4 class="heading-4 head-lvl-4 stick-top" id="link-button">
+						link button
+					</h4>
 					<div class="flex flex-gap-2">
-						<a href="#" class="link link-primary">primary link</a>
-						<a href="#" class="link link-secondary">secondary link</a>
+						<a href="##" class="link link-primary">primary link</a>
+						<a href="##" class="link link-secondary">secondary link</a>
 					</div>
-					<h4 class="heading-4 head-lvl-4" id="icon-button">icon button</h4>
-					<div class="flex flex-gap-2">
+					<h4 class="heading-4 head-lvl-4 stick-top" id="icon-button">
+						icon button
+					</h4>
+					<div class="flex flex-gap-2 stick-top">
 						<button class="btn btn-success">
 							<span><i class="fas fa-shopping-cart"></i></span>&nbsp;add to cart
 						</button>
@@ -161,23 +167,44 @@
 							<span><i class="fas fa-trash"></i></span>&nbsp;delete
 						</button>
 					</div>
-					<h4 class="heading-4 head-lvl-4" id="floating-action-button">
+					<h4
+						class="heading-4 head-lvl-4 stick-top"
+						id="floating-action-button"
+					>
 						floating action button
 					</h4>
 					<div class="flex flex-gap-2">
-						<button class="btn-float btn-float-action">
+						<button
+							class="btn-float btn-float-action"
+							aria-label="floating-button"
+						>
 							<span><i class="fas fa-plus"></i></span>
 						</button>
 					</div>
 				</div>
 				<div>
-					<h3 class="heading-3 head-lvl-3" id="card">card</h3>
+					<h3 class="heading-3 head-lvl-3 stick-top" id="card">card</h3>
+					<p class="justify">
+						cards are content containers. They are used to display products in
+						shopping apps or display items of similar types. There are multiple
+						variants of cards avaialbe as below.
+					</p>
+					<h4 class="heading-4 head-lvl-4 stick-top">Simple card</h4>
+					<p class="justify">card to display text content</p>
+					<div>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam,
+							dolore dolores repudiandae veritatis debitis esse temporibus unde
+							nemo doloremque deserunt, molestiae tenetur, ad obcaecati
+							molestias sed aperiam ut illum explicabo?
+						</p>
+					</div>
 				</div>
 				<div>
-					<h3 class="heading-3 head-lvl-3" id="image">image</h3>
+					<h3 class="heading-3 head-lvl-3 stick-top" id="image">image</h3>
 				</div>
 				<div>
-					<h3 class="heading-3 head-lvl-3" id="input">input</h3>
+					<h3 class="heading-3 head-lvl-3 stick-top" id="input">input</h3>
 				</div>
 			</section>
 		</main>
