style - changes to some things

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -123,10 +123,18 @@
 						feedback to use to any of his / her actions, we make use of alerts.
 						There are multiple types of alerts availale as mentioned below.
 					</p>
-					<p class="alert alert-info">This is an example of info alert</p>
-					<p class="alert alert-success">This is an example of success alert</p>
-					<p class="alert alert-error">This is an example of error alert</p>
-					<p class="alert alert-warning">This is an example of warning alert</p>
+					<div class="alert alert-info">
+						<p class="justify">This is an example of info alert</p>
+					</div>
+					<div class="alert alert-success">
+						<p class="justify">This is an example of success alert</p>
+					</div>
+					<div class="alert alert-error">
+						<p class="justify">This is an example of error alert</p>
+					</div>
+					<div class="alert alert-warning">
+						<p class="justify">This is an example of warning alert</p>
+					</div>
 				</div>
 				<div>
 					<h3 class="heading-3 head-lvl-3 stick-top" id="badge">badge</h3>
@@ -254,7 +262,7 @@
 						>
 							<div>
 								<p class="p-lvl-1 bold heading-3">Water bottle</p>
-								<p class="justify">
+								<p class="p-lvl-3">
 									Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo
 									aliquid esse magni architecto.
 								</p>
