fix: changed ids

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -55,7 +55,7 @@
 
 			<section class="component-section">
 				<div class="component-list">
-					<h2 class="heading-2 head-lvl-3" if="available-components">
+					<h2 class="heading-3 head-lvl-3" if="available-components">
 						Available components
 					</h2>
 					<ul class="list style-none">
@@ -268,10 +268,7 @@
 								</div>
 							</div>
 						</div>
-						<h4
-							class="heading-4 head-lvl-4 stick-top"
-							id="card-with-image-and-text"
-						>
+						<h4 class="heading-4 head-lvl-4 stick-top" id="horizontal-card">
 							horizontal card
 						</h4>
 						<p class="justify">
@@ -300,10 +297,7 @@
 								</button>
 							</div>
 						</div>
-						<h4
-							class="heading-4 head-lvl-4 stick-top"
-							id="card-with-image-and-text"
-						>
+						<h4 class="heading-4 head-lvl-4 stick-top" id="vertical-card">
 							vertical card
 						</h4>
 						<p class="justify">
