--- a/pages/docs.html
+++ b/pages/docs.html
@@ -136,75 +136,95 @@
 				<div class="components">
 					<div class="component-container">
 						<h3 class="heading-3 head-lvl-3 stick-top" id="avatar">avatar</h3>
+						<div class="component-description"></div>
 					</div>
 
 					<div class="component-container">
 						<h3 class="heading-3 head-lvl-3 stick-top" id="alert">alert</h3>
-						<p class="justify">
-							alerts are very common in most of the applications. To provide
-							feedback to use to any of his / her actions, we make use of
-							alerts. There are multiple types of alerts availale as mentioned
-							below.
-						</p>
-						<div class="alert alert-info">
-							<p class="justify">This is an example of info alert</p>
-						</div>
-						<div class="alert alert-success">
-							<p class="justify">This is an example of success alert</p>
-						</div>
-						<div class="alert alert-error">
-							<p class="justify">This is an example of error alert</p>
-						</div>
-						<div class="alert alert-warning">
-							<p class="justify">This is an example of warning alert</p>
+						<div class="component-description">
+							<p class="justify">
+								alerts are very common in most of the applications. To provide
+								feedback to use to any of his / her actions, we make use of
+								alerts. There are multiple types of alerts availale as mentioned
+								below.
+							</p>
+							<div class="alert alert-info">
+								<p class="justify">This is an example of info alert</p>
+							</div>
+							<div class="alert alert-success">
+								<p class="justify">This is an example of success alert</p>
+							</div>
+							<div class="alert alert-error">
+								<p class="justify">This is an example of error alert</p>
+							</div>
+							<div class="alert alert-warning">
+								<p class="justify">This is an example of warning alert</p>
+							</div>
 						</div>
 					</div>
 
 					<div class="component-container">
 						<h3 class="heading-3 head-lvl-3 stick-top" id="badge">badge</h3>
+						<div class="component-description">
+							<p class="justify">
+								badges are usually seen in social media apps to indicate the
+								status of whether a person is online or offline. They are also
+								used to indicate number of unread notifications
+							</p>
+						</div>
 						<h4 class="heading-4 head-lvl-4 stick-top" id="badge-on-icon">
 							badge on icon
 						</h4>
+						<div class="component-description"></div>
 						<h4 class="heading-4 head-lvl-4 stick-top" id="badge-on-avatar">
 							badge on avatar
 						</h4>
+						<div class="component-description"></div>
 					</div>
 
 					<div class="component-container">
 						<h3 class="heading-3 head-lvl-3 stick-top" id="button">button</h3>
-						<p class="justify">
-							buttons are used in two ways &mdash; buttons and call to action
-							links. Call to actions are used to grab users attention to some
-							specific thing that you want the user to click at. There are
-							various variants of buttons. These classes can be used on both
-							buttons and anchor links
-						</p>
+						<div class="component-description">
+							<p class="justify">
+								buttons are used in two ways &mdash; buttons and call to action
+								links. Call to actions are used to grab users attention to some
+								specific thing that you want the user to click at. There are
+								various variants of buttons. These classes can be used on both
+								buttons and anchor links
+							</p>
+						</div>
 						<h4 class="heading-4 head-lvl-4 stick-top" id="primary-button">
 							normal button
 						</h4>
-						<div class="flex flex-gap-2">
-							<button class="btn btn-primary">primary button</button>
-							<button class="btn btn-secondary">secondary button</button>
-							<button class="btn btn-danger">danger button</button>
+						<div class="component-description">
+							<div class="flex flex-gap-2">
+								<button class="btn btn-primary">primary button</button>
+								<button class="btn btn-secondary">secondary button</button>
+								<button class="btn btn-danger">danger button</button>
+							</div>
 						</div>
 						<h4 class="heading-4 head-lvl-4 stick-top" id="link-button">
 							link button
 						</h4>
-						<div class="flex flex-gap-2">
-							<a href="##" class="link link-primary">primary link</a>
-							<a href="##" class="link link-secondary">secondary link</a>
+						<div class="component-description">
+							<div class="flex flex-gap-2">
+								<a href="##" class="link link-primary">primary link</a>
+								<a href="##" class="link link-secondary">secondary link</a>
+							</div>
 						</div>
 						<h4 class="heading-4 head-lvl-4 stick-top" id="icon-button">
 							icon button
 						</h4>
-						<div class="flex flex-gap-2 stick-top">
-							<button class="btn btn-success">
-								<span><i class="fas fa-shopping-cart"></i></span>&nbsp;add to
-								cart
-							</button>
-							<button class="btn btn-danger">
-								<span><i class="fas fa-trash"></i></span>&nbsp;delete
-							</button>
+						<div class="component-description">
+							<div class="flex flex-gap-2 stick-top">
+								<button class="btn btn-success">
+									<span><i class="fas fa-shopping-cart"></i></span>&nbsp;add to
+									cart
+								</button>
+								<button class="btn btn-danger">
+									<span><i class="fas fa-trash"></i></span>&nbsp;delete
+								</button>
+							</div>
 						</div>
 						<h4
 							class="heading-4 head-lvl-4 stick-top"
@@ -212,30 +232,36 @@
 						>
 							floating action button
 						</h4>
-						<div class="flex flex-gap-2">
-							<button
-								class="btn-float btn-float-action"
-								aria-label="floating-button"
-							>
-								<span><i class="fas fa-plus"></i></span>
-							</button>
+						<div class="component-description">
+							<div class="flex flex-gap-2">
+								<button
+									class="btn-float btn-float-action"
+									aria-label="floating-button"
+								>
+									<span><i class="fas fa-plus"></i></span>
+								</button>
+							</div>
 						</div>
 					</div>
 
 					<div class="component-container">
 						<h3 class="heading-3 head-lvl-3 stick-top" id="card">card</h3>
-						<p class="justify">
-							cards are content containers. They are used to display products in
-							shopping apps or to display items of similar types. There are
-							multiple variants of cards avaialbe as below.
-						</p>
+						<div class="component-description">
+							<p class="justify">
+								cards are content containers. They are used to display products
+								in shopping apps or to display items of similar types. There are
+								multiple variants of cards avaialbe as below.
+							</p>
+						</div>
 						<h4 class="heading-4 head-lvl-4 stick-top" id="simple-card">
 							simple card
 						</h4>
-						<p class="justify">card to display text content</p>
-						<div class="card-grid card-row-3">
-							<div class="card card-bg card-p-t-b">
-								<p>This is example of simple card</p>
+						<div class="component-description">
+							<p class="justify">card to display text content</p>
+							<div class="card-grid card-row-3">
+								<div class="card card-bg card-p-t-b">
+									<p>This is example of simple card</p>
+								</div>
 							</div>
 						</div>
 						<h4
@@ -244,67 +270,40 @@
 						>
 							card with image and text
 						</h4>
-						<div class="card-grid card-row-3">
-							<div class="card card-bg card-p-eq-1">
-								<div class="card-image">
-									<img
-										src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
-										alt="headphones"
-									/>
+						<div class="component-description">
+							<div class="card-grid card-row-3">
+								<div class="card card-bg card-p-eq-1">
+									<div class="card-image">
+										<img
+											src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+											alt="headphones"
+										/>
+									</div>
+									<div class="card-text card-text-center">
+										<p class="card-title bold">headphones</p>
+									</div>
 								</div>
-								<div class="card-text card-text-center">
-									<p class="card-title bold">headphones</p>
-								</div>
-							</div>
-							<div class="card card-border card-p-eq-1">
-								<div class="card-image">
-									<img
-										src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
-										alt="headphones"
-									/>
-								</div>
-								<div class="card-text card-text-center">
-									<p class="card-title bold">headphones</p>
+								<div class="card card-border card-p-eq-1">
+									<div class="card-image">
+										<img
+											src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+											alt="headphones"
+										/>
+									</div>
+									<div class="card-text card-text-center">
+										<p class="card-title bold">headphones</p>
+									</div>
 								</div>
 							</div>
 						</div>
 						<h4 class="heading-4 head-lvl-4 stick-top" id="horizontal-card">
 							horizontal card
 						</h4>
-						<p class="justify">
-							This can be used to display product details horizontally
-						</p>
-						<div class="card-horizontal card-border card-p-eq-1">
-							<div class="card-image image-center">
-								<img
-									src="https://images.unsplash.com/photo-1602143407151-7111542de6e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
-									alt="waterbottle"
-								/>
-							</div>
-							<div
-								class="card-text hz-card-text flex flex-column justify-between"
-							>
-								<div>
-									<p class="p-lvl-1 bold heading-3">Water bottle</p>
-									<p class="p-lvl-3">
-										Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-										Illo aliquid esse magni architecto.
-									</p>
-								</div>
-								<button class="btn btn-success">
-									<span><i class="fas fa-shopping-cart"></i></span>&nbsp;add to
-									cart
-								</button>
-							</div>
-						</div>
-						<h4 class="heading-4 head-lvl-4 stick-top" id="vertical-card">
-							vertical card
-						</h4>
-						<p class="justify">
-							This can be used to display product details vertically.
-						</p>
-						<div class="card-grid card-row-3">
-							<div class="card card-border card-p-eq-1">
+						<div class="component-description">
+							<p class="justify">
+								This can be used to display product details horizontally
+							</p>
+							<div class="card-horizontal card-border card-p-eq-1">
 								<div class="card-image image-center">
 									<img
 										src="https://images.unsplash.com/photo-1602143407151-7111542de6e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
@@ -316,7 +315,7 @@
 								>
 									<div>
 										<p class="p-lvl-1 bold heading-3">Water bottle</p>
-										<p class="justify">
+										<p class="p-lvl-3">
 											Lorem ipsum dolor sit amet consectetur, adipisicing elit.
 											Illo aliquid esse magni architecto.
 										</p>
@@ -328,14 +327,49 @@
 								</div>
 							</div>
 						</div>
+						<h4 class="heading-4 head-lvl-4 stick-top" id="vertical-card">
+							vertical card
+						</h4>
+						<div class="component-description">
+							<p class="justify">
+								This can be used to display product details vertically.
+							</p>
+							<div class="card-grid card-row-3">
+								<div class="card card-border card-p-eq-1">
+									<div class="card-image image-center">
+										<img
+											src="https://images.unsplash.com/photo-1602143407151-7111542de6e8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+											alt="waterbottle"
+										/>
+									</div>
+									<div
+										class="card-text hz-card-text flex flex-column justify-between"
+									>
+										<div>
+											<p class="p-lvl-1 bold heading-3">Water bottle</p>
+											<p class="justify">
+												Lorem ipsum dolor sit amet consectetur, adipisicing
+												elit. Illo aliquid esse magni architecto.
+											</p>
+										</div>
+										<button class="btn btn-success">
+											<span><i class="fas fa-shopping-cart"></i></span>&nbsp;add
+											to cart
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 
 					<div class="component-container">
 						<h3 class="heading-3 head-lvl-3 stick-top" id="image">image</h3>
+						<div class="component-description"></div>
 					</div>
 
 					<div class="component-container">
 						<h3 class="heading-3 head-lvl-3 stick-top" id="input">input</h3>
+						<div class="component-description"></div>
 					</div>
 				</div>
 			</section>
