refactor: changed imports of css

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -13,9 +13,9 @@
 	</head>
 	<body>
 		<header class="header">
-			<nav class="navbar container">
+			<nav class="i-navbar container">
 				<div class="nav-item">
-					<h2 class="logo">
+					<h2 class="i-logo">
 						<a href="../index.html">
 							<i class="fas fa-cubes"></i>
 							Chunks
@@ -23,9 +23,9 @@
 					</h2>
 				</div>
 				<div class="nav-item">
-					<ul class="navlist align-base">
-						<li class="navlist-item"><a href="/docs.html">Docs</a></li>
-						<li class="navlist-item">
+					<ul class="i-navlist align-base">
+						<li class="i-navlist-item"><a href="/docs.html">Docs</a></li>
+						<li class="i-navlist-item">
 							<a
 								class="list-icon"
 								rel="noopener noreferrer"
